--- a/src/api/templates/speciesdetail.hbs
+++ b/src/api/templates/speciesdetail.hbs
@@ -23,6 +23,12 @@
         </div>
         <div class="col-md-8">{{detail.species.region}}</div>
     </div>
+     <div class="row">
+        <div class="col-md-4">
+            <strong>Evolutions:</strong>
+        </div>
+        <div class="col-md-8"></div>
+    </div>
 </div>
 
 <div class="container">
@@ -75,7 +81,4 @@
         {{/each}}
     </table>
 
-    {{#each attackers}}
-    <img src="/api/pokemon/{{id}}/image?size=32" alt="{{name}} {{effectiveness}}" title="{{name}} {{effectiveness}}" width="32" height="32" /> 
-    {{/each}}
 </div>
