--- a/src/api/templates/speciesdetail.hbs
+++ b/src/api/templates/speciesdetail.hbs
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-8">{{detail.species.region}}</div>
     </div>
-     <div class="row">
+    <div class="row">
         <div class="col-md-4">
             <strong>Evolutions:</strong>
         </div>
@@ -40,7 +40,10 @@
                     <strong>{{name}}</strong>
                 </p>
                 <p>
-                    <img src="/api/pokemon/{{id}}/image?size=64" width="64" height="64" />
+                    <a href="pogodetail.html?number={{id}}">
+                        <div class="pogo dex-{{id}}"></div>
+                    </a>
+
                 </p>
             </td>
             <td>
