--- a/src/api/templates/pogodetail.hbs
+++ b/src/api/templates/pogodetail.hbs
@@ -33,6 +33,54 @@
             {{species.region}}
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <strong>Attack:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.statAtk}}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <strong>Defense:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.statDef}}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <strong>Status:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.statSta}}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <strong>Candies to Evolve:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.candyToEvolve}}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <strong>Buddy Distance:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.buddyDistance}}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <strong>Capture Rate:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.captureRate}}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <strong>Flee Rate:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.fleeRate}}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <strong>Legendary:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.isLegendary}}</div>
+    </div>
 </div>
 
 <div class="panel">
