Updated parser and src file

--- a/src/api/templates/pogodetail.hbs
+++ b/src/api/templates/pogodetail.hbs
@@ -47,7 +47,7 @@
     </div>
     <div class="row">
         <div class="col-xs-4">
-            <strong>Status:</strong>
+            <strong>Stamina:</strong>
         </div>
         <div class="col-xs-8">{{pokemon.statSta}}</div>
     </div>
