--- a/src/api/templates/speciesdetail.hbs
+++ b/src/api/templates/speciesdetail.hbs
@@ -73,7 +73,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-2">
-                            <strong>Status:</strong>
+                            <strong>Stamina:</strong>
                         </div>
                         <div class="col-md-8">{{statSta}}</div>
                     </div>
