--- a/src/api/templates/speciesdetail.hbs
+++ b/src/api/templates/speciesdetail.hbs
@@ -79,6 +79,12 @@
                     </div>
                     <div class="row">
                         <div class="col-md-2">
+                            <strong>Max CP:</strong>
+                        </div>
+                        <div class="col-md-8">{{maxCP}}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
                             <strong>Candies to Evolve:</strong>
                         </div>
                         <div class="col-md-8">{{candyToEvolve}}</div>
