--- a/src/api/templates/pogodetail.hbs
+++ b/src/api/templates/pogodetail.hbs
@@ -53,6 +53,12 @@
     </div>
     <div class="row">
         <div class="col-xs-4">
+            <strong>Max CP:</strong>
+        </div>
+        <div class="col-xs-8">{{pokemon.maxCP}}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
             <strong>Candies to Evolve:</strong>
         </div>
         <div class="col-xs-8">{{pokemon.candyToEvolve}}</div>
