--- a/src/api/templates/speciesdetail.hbs
+++ b/src/api/templates/speciesdetail.hbs
@@ -41,7 +41,7 @@
                 </p>
                 <p>
                     <a href="pogodetail.html?number={{id}}">
-                        <div title="{{name}}" class="pogo dex-{{id}}" onclick="window.location.href='pogodetail.html?number={{id}}';"> </div>
+                        <div title="{{name}}" class="pogo dex-{{id}}" class="hand" onclick="window.location.href='pogodetail.html?number={{id}}';"> </div>
                     </a>
                 </p>
             </td>
