--- a/src/api/templates/pogodetail.hbs
+++ b/src/api/templates/pogodetail.hbs
@@ -112,15 +112,21 @@
 
 <div class="panel">
     <p class="title">Evolutions</p>
-    {{#each evolutions}}
-    <div class="row">
-        {{#each this}}
-        <div class="col-xs-4">
-            <a href="pogodetail.html?number={{id}}">
-                <div title="{{name}}" class="pogo dex-{{id}}"></div>
-            </a>
-        </div>
+    <table border="0" cellpadding="0" cellspacing="0">
+        {{#each evolutions}}
+        <tr>
+            {{#each this}}
+            <td>
+                <a href="pogodetail.html?number={{id}}" title="{{name}}">
+                    <div title="{{name}}" class="pogo dex-{{id}}"></div>
+                </a>
+            </td>
+            {{#unless @last}}
+            <td>
+                <i class="fa fa-arrow-right fa-4 grey" aria-hidden="true" title="Evolves to"></i>
+            </td>
+            {{/unless}} {{/each}}
+        </tr>
         {{/each}}
-    </div>
-    <hr/> {{/each}}
+    </table>
 </div>
