--- a/src/api/templates/generationlist.hbs
+++ b/src/api/templates/generationlist.hbs
@@ -8,10 +8,10 @@
     <tr>
         <td>
             <button class="btn btn-primary btnView" data-number="{{number}}">
-                <i class="fa fa-eye" aria-hidden="true"></i> View
+                <i class="fa fa-eye" aria-hidden="true" title="View Pokemon"></i>
             </button>
             <button class="btn btn-primary btnEvol" data-number="{{number}}">
-                <i class="fa fa-arrow-right" aria-hidden="true"></i> Evolutions
+                <i class="fa fa-arrow-right" aria-hidden="true" title="View Evolutions"></i>
             </button>
         </td>
         <td>
