--- a/src/api/templates/pogodetail.hbs
+++ b/src/api/templates/pogodetail.hbs
@@ -119,6 +119,7 @@
             <td>
                 <a href="pogodetail.html?number={{id}}" title="{{name}}">
                     <div title="{{name}}" class="pogo dex-{{id}}"></div>
+                    <small>{{generation}}</small>
                 </a>
             </td>
             {{#unless @last}}
