Added new Angular based Single page App UI

--- a/src/ui/css/main.css
+++ b/src/ui/css/main.css
@@ -73,10 +73,21 @@
     }
 
     input[type='number'] {
-        -moz-appearance:textfield;
+        -moz-appearance: textfield;
     }
-    
+
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
         -webkit-appearance: none;
+    }
+
+    .pointer {
+        cursor: pointer !important;
+    }
+
+    .col {
+        float: left;
+    }
+    .col i {
+        margin-top:20px;
     }
