Added egg distance

--- a/src/ui/app/templates/Pokemon.html
+++ b/src/ui/app/templates/Pokemon.html
@@ -71,6 +71,16 @@
     </div>
     <div class="row">
         <div class="col-xs-4">
+            <strong>Egg Distance:</strong>
+        </div>
+        <div class="col-xs-8">
+            <span ng-show="data.pokemon.eggDistance">
+                {{data.pokemon.eggDistance}} KM
+            </span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
             <strong>Capture Rate:</strong>
         </div>
         <div class="col-xs-8">{{data.pokemon.captureRate}}</div>
